--- a/frontend/blata-ditz-frontend/src/pages/AdminReports.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminReports.css
@@ -64,7 +64,7 @@ li {
   );
 }
 
-.main-content {
+.main-content-reports {
   width: 100%;
 }
 
@@ -76,4 +76,180 @@ li {
     min-width: 0;
     width: auto;
   }
+}
+
+/* product sales section*/
+
+.product-sales-section {
+  width: 100%;
+  height: fit-content;
+  min-height: 60vh;
+  border-bottom: 1px dashed rgba(255, 255, 255, 0.155);
+}
+
+.product-sales-section-header {
+  display: flex;
+  flex-direction: row;
+}
+
+.product-sales-section-header h2 {
+  font-size: 1.75rem;
+}
+
+.prodsales-table-header,
+.prodsales-table-rows {
+  display: grid;
+  grid-template-columns: 90px 190px minmax(180px, 3fr) 120px 120px 80px;
+  gap: 15px;
+  padding: 5px 10px;
+  align-items: center;
+}
+
+.prodsales-table-rows {
+  margin-bottom: 10px;
+}
+
+.clickable-sales-row {
+  display: contents;
+  cursor: pointer;
+  border-bottom: 1px solid #222;
+}
+
+.prodsales-table-header {
+  font-weight: normal;
+  font-size: 1.25rem;
+  color: #ffcf33;
+  margin-bottom: 10px;
+  padding-top: 15px;
+}
+
+.prodsales-cell,
+.prodsales-table-header-cell {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  min-height: 70px;
+  margin-bottom: 0;
+  padding: 5px 0;
+  font-size: 1.5rem;
+}
+
+.product-cell-image {
+  min-height: 70px;
+}
+
+.product-cell-image img {
+  width: 100px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+.prodsales-cell-name {
+  display: block;
+  font-size: 1.5rem;
+  line-height: 1.3;
+  padding-right: 10px;
+}
+
+.view-hint-reports {
+  font-style: italic;
+  font-size: 1.25rem;
+  margin-right: auto;
+}
+
+.no-products-sales-message {
+  padding: 20px;
+  color: #999;
+  text-align: center;
+  font-size: 1.25rem;
+  font-style: italic;
+  border: 1px dashed #333;
+  margin-top: 10px;
+  border-radius: 4px;
+}
+
+@media (max-width: 768px) {
+  .prodsales-table-header,
+  .prodsales-table-rows {
+    grid-template-columns: 50px 70px 1fr 60px 80px 40px;
+    gap: 10px;
+  }
+  .product-cell-image img {
+    width: 50px;
+  }
+  .product-cell-name {
+    font-size: 0.85rem;
+  }
+}
+
+.product-view-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-color: rgba(0, 0, 0, 0.7);
+
+  z-index: 1000;
+}
+
+.modal-content {
+  background-color: #070709;
+  color: #d5d6d9;
+  padding: 30px;
+  border-radius: 10px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+  max-width: 90%;
+  width: 400px;
+
+  transform: scale(1);
+  transition: all 0.3s ease-in-out;
+}
+
+.modal-content h3 {
+  color: #ffcf33;
+  margin-top: 0;
+  margin-bottom: 20px;
+  font-size: 1.75rem;
+}
+
+.modal-content p {
+  font-size: 1.25rem;
+  margin-bottom: 10px;
+}
+
+.modal-content button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #ffcf33;
+  color: #000;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+/*product stocks alert*/
+
+.stocks-alert-section {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.stocks-alert-section-header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.stocks-alert-section h3 {
+  font-size: 1.75rem;
 }
