--- a/frontend/blata-ditz-frontend/src/pages/AdminUsers.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminUsers.css
@@ -68,3 +68,30 @@ li {
     width: auto;
   }
 }
+
+.admin-users-table {
+  width: 100%;
+  margin-top: 20px;
+}
+.users-columnHeader,
+.user-entry {
+  display: grid;
+  grid-template-columns: 0.5fr 1fr 1fr 0.8fr 0.7fr 1fr;
+  width: 100%;
+  font-size: 1.4rem;
+  padding: 1rem 0;
+
+  border-bottom: 0.1px solid #d5d6d986;
+}
+
+.users-columnHeader {
+  font-weight: 600;
+}
+.user-entry {
+  font-weight: 300;
+}
+
+.users-list {
+  overflow-y: auto;
+  height: 50vh;
+}
