--- a/frontend/blata-ditz-frontend/src/pages/UserOrders.css
+++ b/frontend/blata-ditz-frontend/src/pages/UserOrders.css
@@ -18,12 +18,47 @@ li {
 .header h1 {
   font-size: 2.4rem;
 }
-
 .dashboard {
   display: flex;
   flex-direction: row;
   width: 100%;
   gap: clamp(2rem, 4vw, 5rem);
+}
+
+.user-edit-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem 2rem;
+  border-bottom: 1px solid #333;
+  margin-bottom: 10px;
+}
+
+.user-edit-header h3 {
+  margin: 0;
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+.close-edit-modal-btn {
+  background: #000;
+  border: none;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  font-size: 1.8rem;
+  color: white;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  line-height: 1;
+  padding-bottom: 3px;
+  transition: background-color 0.2s;
+}
+
+.close-edit-modal-btn:hover {
+  background-color: #ff3333;
 }
 
 .sidebar {
@@ -78,7 +113,6 @@ li {
     width: auto;
   }
 }
-
 /* STYLES FOR ORDERS-TAB */
 .user-orders-section {
   gap: 1.6rem;
