--- a/frontend/blata-ditz-frontend/src/pages/AdminInventory.css
+++ b/frontend/blata-ditz-frontend/src/pages/AdminInventory.css
@@ -95,7 +95,7 @@ li {
 .product-table-header,
 .product-table-rows {
   display: grid;
-  grid-template-columns: 80px 150px minmax(180px, 3fr) 80px 120px 60px;
+  grid-template-columns: 1fr 3fr 1fr 1fr 1fr 1fr;
   gap: 15px;
   padding: 5px 10px;
   align-items: center;
@@ -151,7 +151,7 @@ li {
   display: block;
   font-size: 1.5rem;
   line-height: 1.3;
-  padding-right: 10px;
+  padding-right: 30px;
 }
 
 .brand-header {
@@ -187,10 +187,6 @@ li {
 }
 .brand-header.active .brand-dropdown-icon {
   transform: rotate(180deg);
-}
-
-input[type="checkbox"] {
-  accent-color: #ffcf33;
 }
 
 .add-product-row {
@@ -409,7 +405,7 @@ input[type="checkbox"] {
 .form-group label {
   display: block;
   margin-bottom: 0.5rem;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   color: #a0a0a0;
 }
 
@@ -900,4 +896,15 @@ input[type="checkbox"] {
   flex: 1;
 
   text-transform: uppercase;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+  appearance: textfield; /* Standard property */
 }
